--- a/src/app/shared/components/table-edit/table-edit.component.scss
+++ b/src/app/shared/components/table-edit/table-edit.component.scss
@@ -21,3 +21,10 @@
         height: 18px;
     }
 }
+
+.edit-tb{
+    .mat-row:hover {
+        background: whitesmoke;
+        cursor: pointer;
+    }
+}
