--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,7 +39,7 @@ body {
     width          : 100%;
     display        : flex;
     justify-content: center;
-    margin         : 20px 0;
+    margin         : 20px 0 !important;
     gap            : 10px;
 
     button {
