--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -89,3 +89,15 @@
         pointer-events: none;
     }
 }
+
+::ng-deep .td-absolute{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+}
