--- a/src/app/pages/administration-risk/risk/risk.component.html
+++ b/src/app/pages/administration-risk/risk/risk.component.html
@@ -1,10 +1,10 @@
 <div class="container-title">Nivel de Riesgos</div>
-<app-table-edit [dataSource]="getDataSource()" [columns]="getColumns()" [state]="true">
-
+<app-table-edit [dataSource]="dataSource" [columns]="getColumns()" [state]="true"
+                [reset]="reset" (onSelectRow)="getrow($event)">
 </app-table-edit>
 
 <div class="container-btn-save">
-    <button>Añadir</button>
-    <button>Modificar</button>
+    <button (click)="add()">Añadir</button>
+    <button (click)="add(indexSelected)" [disabled]="indexSelected === null">Modificar</button>
     <button>Grabar</button>
 </div>
