--- a/src/app/pages/process-risk/components/asset-inventory/asset-inventory.component.html
+++ b/src/app/pages/process-risk/components/asset-inventory/asset-inventory.component.html
@@ -56,37 +56,38 @@
         </td>
       </ng-container>
   
-      <ng-container matColumnDef="typeAsset1">
+      <ng-container matColumnDef="typeAsset">
         <th mat-header-cell *matHeaderCellDef> Tipo de Activo </th>
         <td mat-cell *matCellDef="let element;let i = index"> 
-          <div *ngIf="indexSelectedRow !== i">{{element.typeAsset1}} </div> 
-          <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="typeAsset1">
+          <div *ngIf="indexSelectedRow !== i">{{element.typeAsset}} </div> 
+          <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="typeAsset">
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="typeAsset2">
-        <th mat-header-cell *matHeaderCellDef> Tipo de Activo </th>
+      <ng-container matColumnDef="assetClass">
+        <th mat-header-cell *matHeaderCellDef> Categoría de Activo </th>
         <td mat-cell *matCellDef="let element;let i = index"> 
-          <div *ngIf="indexSelectedRow !== i">{{element.typeAsset2}} </div> 
-          <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="typeAsset2">
+          <div *ngIf="indexSelectedRow !== i">{{element.assetClass}} </div> 
+          <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="assetClass">
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="typeAsset3">
-        <th mat-header-cell *matHeaderCellDef> Tipo de Activo </th>
+      <ng-container matColumnDef="ownerAsset">
+        <th mat-header-cell *matHeaderCellDef> Propietario del Activo </th>
         <td mat-cell *matCellDef="let element;let i = index"> 
-          <div *ngIf="indexSelectedRow !== i">{{element.typeAsset3}} </div> 
-          <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="typeAsset3">
+          <div *ngIf="indexSelectedRow !== i">{{element.ownerAsset}} </div> 
+          <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="ownerAsset">
         </td>
       </ng-container>
- 
-      <ng-container matColumnDef="typeAsset4">
-        <th mat-header-cell *matHeaderCellDef> Tipo de Activo </th>
+
+      <ng-container matColumnDef="classificationInformation">
+        <th mat-header-cell *matHeaderCellDef> Clasificación de la Información </th>
         <td mat-cell *matCellDef="let element;let i = index"> 
-          <div *ngIf="indexSelectedRow !== i">{{element.typeAsset4}} </div> 
-          <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="typeAsset4">
+          <div *ngIf="indexSelectedRow !== i">{{element.classificationInformation}} </div> 
+          <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="classificationInformation">
         </td>
       </ng-container>
+
 
       <ng-container matColumnDef="specificLocation">
         <th mat-header-cell *matHeaderCellDef> Ubicación especifica </th>
@@ -118,7 +119,7 @@
 
   <div class="cont-assets-btn">
     <div class="col-left-btn">
-      <button type="button" class="btn-light-blue">Anadir</button>
+      <button type="button" class="btn-light-blue" (click)="add()">Anadir</button>
       <button type="button" class="btn-light-blue" [disabled]="indexSelectedRow ===null" (click)="edit()">Modificar</button>
       <button type="button" class="btn-light-blue">Eliminar</button>
     </div>
