--- a/src/app/pages/process-risk/components/risk-registe/risk-registe.component.html
+++ b/src/app/pages/process-risk/components/risk-registe/risk-registe.component.html
@@ -146,7 +146,7 @@
     <ng-container matColumnDef="valueCid">
       <th mat-header-cell *matHeaderCellDef> Valor CID </th>
       <td mat-cell *matCellDef="let element;let i = index">
-        <div *ngIf="indexSelectedRow !== i">{{element.valueCid}}</div>
+        <div *ngIf="indexSelectedRow !== i" class="td-absolute" style="background-color:#fcc404;">{{element.valueCid}}</div>
         <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="valueCid">
       </td>
     </ng-container>
@@ -170,7 +170,7 @@
     <ng-container matColumnDef="levelRisk">
       <th mat-header-cell *matHeaderCellDef> Nivel de Riesgo Inherente </th>
       <td mat-cell *matCellDef="let element;let i = index">
-        <div *ngIf="indexSelectedRow !== i">{{element.levelRisk}}</div>
+        <div *ngIf="indexSelectedRow !== i" class="td-absolute" style="background-color:#fcc404;">{{element.levelRisk}}</div>
         <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="levelRisk">
       </td>
     </ng-container>
@@ -250,7 +250,7 @@
     <ng-container matColumnDef="residualrisk">
       <th mat-header-cell *matHeaderCellDef> Riesgo Residual (Antes del Tratamiento) </th>
       <td mat-cell *matCellDef="let element;let i = index">
-        <div *ngIf="indexSelectedRow !== i">{{element.residualrisk}}</div>
+        <div *ngIf="indexSelectedRow !== i" class="td-absolute" style="background-color:#94d454;">{{element.residualrisk}}</div>
         <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="residualrisk">
       </td>
     </ng-container>
@@ -280,7 +280,7 @@
 
 <div class="cont-risk-btn">
   <div class="col-left-btn">
-    <button type="button" class="btn-light-blue">Anadir</button>
+    <button type="button" class="btn-light-blue" (click)="add()">Anadir</button>
     <button type="button" class="btn-light-blue" [disabled]="indexSelectedRow ===null"
       (click)="edit()">Modificar</button>
     <button type="button" class="btn-light-blue">Eliminar</button>
