--- a/src/app/pages/process-risk/components/risk-treatment/risk-treatment.component.html
+++ b/src/app/pages/process-risk/components/risk-treatment/risk-treatment.component.html
@@ -26,16 +26,14 @@
         <ng-container matColumnDef="subProcess">
             <th mat-header-cell *matHeaderCellDef> Sub proceso </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.subProcess}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="subProcess">
+                <div >{{element.subProcess}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef> Tipo </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.type}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="type">
+                <div >{{element.type}} </div>
             </td>
         </ng-container>
 
@@ -43,168 +41,146 @@
         <ng-container matColumnDef="riskCode">
             <th mat-header-cell *matHeaderCellDef> Código del Riesgo u Oportunidad </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.riskCode}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="riskCode">
+                <div >{{element.riskCode}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="riskName">
             <th mat-header-cell *matHeaderCellDef> Nombre del Riesgo / Oportunidad </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.riskName}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="riskName">
+                <div >{{element.riskName}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="riskValue">
             <th mat-header-cell *matHeaderCellDef> Valor de Riesgo Residual (Antes del tratamiento) </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.riskValue}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="riskValue">
+                <div >{{element.riskValue}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="residualRiskBefore">
             <th mat-header-cell *matHeaderCellDef> Riesgo Residual (Antes del Tratamiento) </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.residualRiskBefore ? 'Si' : 'No'}}</div>
-                <mat-checkbox *ngIf="editActive && indexSelectedRow === i" [checked]="element.residualRiskBefore" [color]="'primary'" formControlName="residualRiskBefore"></mat-checkbox>
+                <div >{{element.residualRiskBefore ? 'Si' : 'No'}}</div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="assetName">
             <th mat-header-cell *matHeaderCellDef> Nombre del activo </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.assetName}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="assetName">
+                <div >{{element.assetName}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="referenceControlISO">
             <th mat-header-cell *matHeaderCellDef> Control de referencia ISO 27001 </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.referenceControlISO}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="referenceControlISO">
+                <div >{{element.referenceControlISO}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="proposedControls">
             <th mat-header-cell *matHeaderCellDef> Controles Propuestos </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.proposedControls}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="proposedControls">
+                <div >{{element.proposedControls}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="responsible">
             <th mat-header-cell *matHeaderCellDef> Responsable </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.responsible}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="responsible">
+                <div >{{element.responsible}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="startDate">
             <th mat-header-cell *matHeaderCellDef> Fecha de Inicio </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.startDate}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="startDate">
+                <div >{{element.startDate | date: 'dd/MM/yyyy'}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="endDate">
             <th mat-header-cell *matHeaderCellDef> Fecha Fin </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.endDate}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="endDate">
-            </td>
+                <div >{{element.endDate | date: 'dd/MM/yyyy'}} </div>
         </ng-container>
 
         <ng-container matColumnDef="followUp">
             <th mat-header-cell *matHeaderCellDef> Seguimiento </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.followUp}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="followUp">
+                <div >{{element.followUp}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="controlImplementationStatus">
             <th mat-header-cell *matHeaderCellDef> Estado de implementación del control </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.controlImplementationStatus}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="controlImplementationStatus">
+                <div >{{element.controlImplementationStatus}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="determinationDefinitionResponsibleParty">
             <th mat-header-cell *matHeaderCellDef> Determinación y definición de responsable(s) </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.determinationDefinitionResponsibleParty}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="determinationDefinitionResponsibleParty">
+                <div >{{element.determinationDefinitionResponsibleParty}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="frequencyExecution">
             <th mat-header-cell *matHeaderCellDef> Frecuencia de ejecución y seguimiento </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.frequencyExecution}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="frequencyExecution">
+                <div >{{element.frequencyExecution}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="documentacionEvidencia">
             <th mat-header-cell *matHeaderCellDef> Documentación o evidencia </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.documentacionEvidencia}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="documentacionEvidencia">
+                <div >{{element.documentacionEvidencia}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="preventiveNature">
             <th mat-header-cell *matHeaderCellDef> Carácter preventivo </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.preventiveNature}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="preventiveNature">
+                <div >{{element.preventiveNature}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="controlApplication">
             <th mat-header-cell *matHeaderCellDef> Aplicación del control </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.controlApplication}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="controlApplication">
+                <div >{{element.controlApplication}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="effectivenessProposedControl">
             <th mat-header-cell *matHeaderCellDef> Efectividad del control propuesto </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.effectivenessProposedControl}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="effectivenessProposedControl">
+                <div >{{element.effectivenessProposedControl}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="valueResidualRisk">
             <th mat-header-cell *matHeaderCellDef> Valor del riesgo residual (Después del tratamiento) </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.valueResidualRisk}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="valueResidualRisk">
+                <div >{{element.valueResidualRisk}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="residualRiskAfter">
             <th mat-header-cell *matHeaderCellDef> Riesgo Residual (Después del Tratamiento) </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.residualRiskAfter}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="residualRiskAfter">
+                <div>{{element.residualRiskAfter}} </div>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="comment">
             <th mat-header-cell *matHeaderCellDef> Comentario </th>
             <td mat-cell *matCellDef="let element;let i = index">
-                <div *ngIf="indexSelectedRow !== i">{{element.comment}} </div>
-                <input class="inpt-row" *ngIf="editActive && indexSelectedRow === i" type="text" formControlName="comment">
+                <div>{{element.comment}} </div>
             </td>
         </ng-container>
 
@@ -236,8 +212,8 @@
 
 <div class="cont-risk-btn">
     <div class="col-left-btn">
-        <button type="button" class="btn-light-blue">Anadir</button>
-        <button type="button" class="btn-light-blue" [disabled]="indexSelectedRow ===null" (click)="edit()">Modificar</button>
+        <button type="button" class="btn-light-blue" (click)="openModalTreatment()">Anadir</button>
+        <button type="button" class="btn-light-blue" [disabled]="indexSelectedRow ===null" (click)="openModalTreatment(indexSelectedRow)">Modificar</button>
         <button type="button" class="btn-light-blue">Eliminar</button>
     </div>
     <button type="button" class="btn-light-blue">Preaprobar</button>
